Write controller for Cars with dynamic path.